--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   text-align: center;
   --mainWidth: calc(100% - 250px);
-  --mainHeight: calc(100% - 80px);
+  --mainHeight: calc(100vh - 80px);
 }
 
 .toast-message {
